-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 17, 21, 25, 26
-
Component/s: client-libs
-
b27
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8373422 | 25.0.3-oracle | Anass Baya | P3 | Resolved | Fixed | b01 |
| JDK-8373580 | 25.0.3 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
| JDK-8373424 | 21.0.11-oracle | Anass Baya | P3 | Resolved | Fixed | b01 |
| JDK-8373889 | 21.0.11 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
| JDK-8373438 | 17.0.19-oracle | Anass Baya | P3 | Resolved | Fixed | b01 |
| JDK-8374140 | 17.0.19 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
| JDK-8373440 | 11.0.31-oracle | Anass Baya | P3 | Resolved | Fixed | b01 |
| JDK-8373504 | 8u491 | Anass Baya | P3 | Resolved | Fixed | b01 |
Moreover, some modern systems do not have it, which prevents GTK from loading, e.g blocking some of the robot functionality on Wayland.
The dl_symbol_gthread was initially added to the gtk3_interface.c in JDK-8164321, but it was never used.
Actual usage of the gthread-2.0 was removed with GTK2 support in
- backported by
-
JDK-8373422 Unnecessary gthread-2.0 loading
-
- Resolved
-
-
JDK-8373424 Unnecessary gthread-2.0 loading
-
- Resolved
-
-
JDK-8373438 Unnecessary gthread-2.0 loading
-
- Resolved
-
-
JDK-8373440 Unnecessary gthread-2.0 loading
-
- Resolved
-
-
JDK-8373504 Unnecessary gthread-2.0 loading
-
- Resolved
-
-
JDK-8373580 Unnecessary gthread-2.0 loading
-
- Resolved
-
-
JDK-8373889 Unnecessary gthread-2.0 loading
-
- Resolved
-
-
JDK-8374140 Unnecessary gthread-2.0 loading
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk17u-dev/b3527e4a
-
Commit(master)
openjdk/jdk21u-dev/335ca2e0
-
Commit(master)
openjdk/jdk25u-dev/b41a9ed7
-
Commit(master)
openjdk/jdk/5ea2b640
-
Review(master)
openjdk/jdk17u-dev/4212
-
Review(master)
openjdk/jdk21u-dev/2515
-
Review(master)
openjdk/jdk25u-dev/78
-
Review(master)
openjdk/jdk/28625