8372977: unnecessary gthread-2.0 loading